--- a/Alee_BulkyWeb/Views/Category/Create.cshtml
+++ b/Alee_BulkyWeb/Views/Category/Create.cshtml
@@ -6,26 +6,37 @@
             <h2 class="text-primary">Create Category</h2>
             <hr />
         </div>
+        @* <div asp-validation-summary="All"></div> *@
         <div class="mb-3 row p-1">
-            <label class="p-0">Category Name</label>
-            <input type="text" class="form-control" />
+            <label asp-for="Name" class="p-0"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+
         </div>
         <div class="mb-3 row p-1">
-            <label class="p-0">Display Order</label>
-            <input type="text" class="form-control" />
+            <label asp-for="DisplayOrder" class="p-0"></label>
+            <input asp-for="DisplayOrder" class="form-control" />
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+
         </div>
 
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" >Create</button>
+                <button type="submit" class="btn btn-primary form-control">Create</button>
 
             </div>
             <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border form-control"       >
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border form-control">
                     Back to List
                 </a>
             </div>
         </div>
-         
+
     </div>
 </form>
+
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial.cshtml"/>
+    }
+}
