--- a/Alee_BulkyWeb/Views/Category/Index.cshtml
+++ b/Alee_BulkyWeb/Views/Category/Index.cshtml
@@ -1,33 +1,38 @@
 ﻿@model List<Category>
 
-
-
-<div class="container">
-    <div class="row pt-4 pb-2">
-        <div class="col-6">
-            <h2 class="text-primary">
-                Category List
-            </h2>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Category List</h2>
+            </div>
         </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i>Create New Category
-            </a>
-        </div>
+
     </div>
+    <div class="card-body p-4">
+        <div class="row pb-3">
+            <div class="col-6">
+                
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i>Create New Category
+                </a>
+            </div>
+        </div>
 
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>
-                Category Name
-            </th>
-            <th>
-                Display Order
-            </th>
-            <th></th>
-        </tr>
-        </thead>
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        Category Name
+                    </th>
+                    <th>
+                        Display Order
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
         <tbody>
             @foreach(var obj in Model.OrderBy(u => u.DisplayOrder))
             {
@@ -50,5 +55,15 @@
             }
         </tbody>
     </table>
+    </div>
+</div>
+
+
+
+
+<div class="container">
+    
+
+    
 </div>
 
