--- a/Alee_BulkyWeb/Views/Category/Edit.cshtml
+++ b/Alee_BulkyWeb/Views/Category/Edit.cshtml
@@ -9,6 +9,7 @@
         </div>
 
     </div>
+
     <div class="card-body p-4">
         <form method="post">
             <input asp-for="Id" hidden />
@@ -16,13 +17,13 @@
                 
                 @* <div asp-validation-summary="All"></div> *@
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Name" disabled class="form-control border-0 shadow" />
+                    <input asp-for="Name" class="form-control border-0 shadow" />
                     <label asp-for="Name" class="ms-2"></label>
                     <span asp-validation-for="Name" class="text-danger"></span>
 
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="DisplayOrder" disabled class="form-control border-0 shadow" />
+                    <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
                     <label asp-for="DisplayOrder" class="ms-2"></label>
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
 
