--- a/Alee_BulkyWeb/Views/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Alee_BulkyWeb
-@using AleeVan.Models
+﻿@using AleeBookWeb
+@using AleeBook.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
