--- a/Alee_BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AleeBookWeb
 @using AleeBook.Models
+@using AleeBook.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
