--- a/Alee_BulkyWeb/Views/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using AleeBookWeb
 @using AleeBook.Models
+@using AleeBook.Models.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
