--- a/Alee_BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -6,13 +6,14 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Product</h2>
+                <h2 class="text-white py-2">@(Model.Product.Id !=0?"Update":"Create") Product</h2>
             </div>
         </div>
 
     </div>
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
+            <input asp-for="Product.Id" hidden/>
             <div class="border p-3 ">
 
                 @* <div asp-validation-summary="All"></div> *@
@@ -75,7 +76,15 @@
 
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        @if (Model.Product.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+
+                        }
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary border form-control">
