--- a/Alee_BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -22,10 +22,9 @@
                     <label asp-for="Product.Title" class="ms-2"></label>
                     <span asp-validation-for="Product.Title" class="text-danger"></span>
                 </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Description" class="form-control border-0 shadow" />
-                    <label asp-for="Product.Description" class="ms-2"></label>
-                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                <div class="py-2 col-12">
+                    <label asp-for="Product.Description" class="ms-2 text-muted"></label>
+                    <textarea asp-for="Product.Description" class="form-control border-0 shadow"></textarea>
                 </div>
 
                 <div class="form-floating py-2 col-12">
@@ -100,6 +99,20 @@
 
 
 @section Scripts {
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons image lists  table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough  | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent ',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ],
+            ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial.cshtml"/>
     }
