--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -63,6 +63,8 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/w07kbl780d8bkm4yy9tbfebqf06hjjw2im5pgdyxgotqkfvr/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
