--- a/Alee_BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -47,7 +47,7 @@
                         @obj.Author
                     </td>
                     <td>
-
+                        @obj.Category.Name
                     </td>
                     
 
