06 - 022 Edit Product Link in DataTable

--- a/Alee_BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -29,7 +29,8 @@
                     <th>Price</th>
                     <th>Author</th>
                     <th>Category</th>
-                    <th></th>
+                    <th>Noname</th>
+                    
                 </tr>
             </thead>
        
@@ -41,9 +42,6 @@
 
 
 @* <div class="container">
-    
-
-    
 </div> *@
 
 @section Scripts{
