--- a/Alee_BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AleeBookWeb
 @using AleeBook.Models
 @using AleeBook.Models.ViewModels
+@using AleeBook.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
