--- a/Alee_BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using AleeBookWeb
 @using AleeBook.Models
 @using AleeBook.Models.ViewModels
+@using AleeBook.Utility
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
