--- a/Alee_BulkyWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Alee_BulkyWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using AleeBookWeb.Areas.Identity
 @using AleeBookWeb.Areas.Identity.Pages
+@using AleeBook.Utility
+@using AleeBook.Models
+@using AleeBook.Models.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
