--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    @if (User.IsInRole(SD.Role_Admin))
+                    {
+                            
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Content Management
@@ -44,6 +47,8 @@
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
+                    }
+
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
