--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/AleeBookWeb.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="//cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="//cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css"/>
 </head>
 <body>
 <header>
@@ -25,13 +25,12 @@
                     <li class="nav-item">
                         <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    
+
                     <li class="nav-item">
-                        <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link " asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>
                     </li>
                     @if (User.IsInRole(SD.Role_Admin))
                     {
-                            
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Content Management
@@ -46,17 +45,19 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
                                 </li>
-                                
-                                <li><hr class="dropdown-divider"></li>
+
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                             </ul>
                         </li>
-                    } 
+                    }
 
-                        <li class="nav-item">
-                            <a class="nav-link " asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                <i class="bi bi-cart"></i> &nbsp;
-                            </a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link " asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                            <i class="bi bi-cart"></i> &nbsp;
+                        </a>
+                    </li>
 
                 </ul>
                 <partial name="_LoginPartial"/>
@@ -78,9 +79,9 @@
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="//cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js" asp-append-version="true"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="//cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js" asp-append-version="true"></script>
 
 <script src="https://cdn.tiny.cloud/1/w07kbl780d8bkm4yy9tbfebqf06hjjw2im5pgdyxgotqkfvr/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
