--- a/Alee_BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -208,7 +208,7 @@
                             </div>
                             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
-                                <button asp-action="UpdateOrderDetail" type="submit" class="btn btn-warning form-control my-1" >Update Order Details</button>
+                                <button asp-action="UpdateOrderDetail" type="submit" class="btn btn-warning form-control my-1">Update Order Details</button>
                             }
 
                         </div>
@@ -248,10 +248,31 @@
                                     </div>
                                 </li>
                             </ul>
-                            <input type="submit" class="btn btn-success form-control my-1" value="Pay Now"/>
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Start Processing"/>
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Ship Order"/>
-                            <input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order"/>
+
+                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusShipped)
+                            {
+                                <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
+                            }
+
+                            @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                            {
+                                @if (Model.OrderHeader.OrderStatus == SD.StatusApproved)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control my-1">Start Processing</button>
+                                }
+
+                                @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control my-1">Ship Order</button>
+                                }
+
+                                @if (!new List<string> { SD.StatusRefunded, SD.StatusCancelled, SD.StatusShipped }.Contains(Model.OrderHeader.OrderStatus))
+                                {
+                                    <button type="submit" class="btn btn-danger form-control my-1">Cancel Order</button>
+                                }
+                            }
+
+
                         </div>
                     </div>
                 </div>
