--- a/Alee_BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -130,7 +130,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control"/>
+                                        <input asp-for="OrderHeader.Carrier" id="carrier" type="text" class="form-control"/>
                                     }
                                     else
                                     {
@@ -143,7 +143,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control"/>
+                                        <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control"/>
                                     }
                                     else
                                     {
@@ -258,12 +258,12 @@
                             {
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusApproved)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Start Processing</button>
+                                    <button type="submit" asp-action="StartProcessing" class="btn btn-primary form-control my-1">Start Processing</button>
                                 }
 
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Ship Order</button>
+                                    <button type="submit" asp-action="ShipOrder" onclick="return validateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
 
                                 @if (!new List<string> { SD.StatusRefunded, SD.StatusCancelled, SD.StatusShipped }.Contains(Model.OrderHeader.OrderStatus))
@@ -280,3 +280,29 @@
         </div>
     </div>
 </form>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial"/>
+    <script >
+        function validateInput() {
+            if (document.getElementById("trackingNumber").value === "" ){
+                  Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please enter tracking number!'
+                  });
+                  return false;
+            }
+          if (document.getElementById("carrier").value === "" ){
+            Swal.fire({
+              icon: 'error',
+              title: 'Oops...',
+              text: 'Please enter carrier!'
+            });
+            return false;
+        }
+          return true;
+        }
+    </script>
+}
