--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Http
-@inject  IHttpContextAccessor HttpContextAccessor 
+﻿@inject  IHttpContextAccessor HttpContextAccessor 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -52,10 +51,13 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Create User</a>
+                                </li>
                             </ul>
                         </li>
                     }
-                    
+
                     @* @if (HttpContextAccessor.HttpContext.Session.GetInt32((SD.SessionCart) )!= null) *@
                     @* { *@
                     @*     <li class="nav-item"> *@
@@ -81,7 +83,6 @@
                         </a>
                     </li>
 
-                    
 
                 </ul>
                 <partial name="_LoginPartial"/>
