15 - 005 Lock Unlock in Action

--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -117,6 +117,9 @@
 
 <script src="https://cdn.tiny.cloud/1/w07kbl780d8bkm4yy9tbfebqf06hjjw2im5pgdyxgotqkfvr/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
+@* toastr *@
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
