--- a/Alee_BulkyWeb/Areas/Admin/Views/User/RoleManagement.cshtml
+++ b/Alee_BulkyWeb/Areas/Admin/Views/User/RoleManagement.cshtml
@@ -60,7 +60,7 @@
     <script>
         $(document).ready(function () {
             $('#ApplicationUser_Role').change(function () {
-                var selection = $('#ApplicationUser_Role Option:Selected').text();
+                let selection = $('#ApplicationUser_Role Option:Selected').text();
                 if (selection == 'Company') {
                     $('#ApplicationUser_CompanyId').show();
                 }
