--- a/Alee_BulkyWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Alee_BulkyWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShoppingCartVM
 
 <form method="post">
-    <br />
+    <br/>
     <div class="card shadow border-0">
         <div class="card-header bg-secondary bg-gradient text-light ml-0 py-4">
             <div class="row px-4">
@@ -18,7 +18,9 @@
             </div>
             <div class="row mb-3 pb-3">
                 <div class="col-md-2 offset-md-1">
-                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue Shopping</small></a>
+                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm">
+                        <small>Continue Shopping</small>
+                    </a>
                 </div>
                 <div class="col-md-10 offset-md-1">
 
@@ -27,10 +29,22 @@
                         <div class="row border-bottom pb-3">
                             <div class="d-none d-lg-block col-lg-1 text-center py-2">
                                 @* <img src="@item.Product.ImageUrl" class="rounded" width="100%" /> *@
+                                @if (item.Product.ProductImages != null && item.Product.ProductImages.Count() > 0)
+                                {
+                                    <img src="@item.Product.ProductImages.FirstOrDefault().ImageUrl" class="card-img-top rounded w-100"/>
+                                }
+                                else
+                                {
+                                    <img src="https://placehold.co/500x600/png" class="card-img-top rounded w-100"/>
+                                }
                             </div>
                             <div class="col-12 col-lg-6 pt-md-3">
-                                <h5 class="text-uppercase text-secondary"><strong>@item.Product.Title</strong></h5>
-                                <p><small>@Html.Raw(item.Product.Description)</small></p>
+                                <h5 class="text-uppercase text-secondary">
+                                    <strong>@item.Product.Title</strong>
+                                </h5>
+                                <p>
+                                    <small>@Html.Raw(item.Product.Description)</small>
+                                </p>
                             </div>
                             <div class="col-12  col-lg-5 text-center row">
                                 <div class="col-3 text-md-right pt-2 pt-md-4">
