--- a/Alee_BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/Alee_BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -7,6 +7,14 @@
             <div class="row p-2">
                 <div class="col-12 p-1">
                     <div class="card border-0 p-3 shadow border-top border-5 rounded">
+                        @if (product.ProductImages != null && product.ProductImages.Count() > 0)
+                        {
+                            <img src="@product.ProductImages.FirstOrDefault().ImageUrl" class="card-img-top rounded"/>
+                        }
+                        else
+                        {
+                            <img src="https://placehold.co/500x600/png" class="card-img-top rounded"/>
+                        }
                         @* <img src="@product.ImageUrl" class="card-img-top rounded"/> *@
                         <div class="card-body pb-0">
                             <p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@product.Title</p>
@@ -14,13 +22,15 @@
                         </div>
                         <div class="pl-1">
                             <p class="text-dark text-opacity-75 text-center mb-0">
-                                List Price: 
-                                <span class="text-decoration-line-through">@product.ListPrice.ToString("c")
+                                List Price:
+                                <span class="text-decoration-line-through">
+                                    @product.ListPrice.ToString("c")
                                 </span>
                             </p>
                         </div>
                         <div class="pl-1">
-                            <p class="text-dark text-opacity-75 text-center">As low as: 
+                            <p class="text-dark text-opacity-75 text-center">
+                                As low as:
                                 <span>@product.Price100.ToString("c")</span>
                             </p>
                         </div>
