--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -66,6 +66,10 @@
                         </li>
                     }
 
+                    <li class="nav-item">
+                        <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Guild">Guild</a>
+                    </li>
+
 
                     @* @if (HttpContextAccessor.HttpContext.Session.GetInt32((SD.SessionCart) )!= null) *@
                     @* { *@
@@ -119,7 +123,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="//cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js" asp-append-version="true"></script>
 
-<script src="https://cdn.tiny.cloud/1/w07kbl780d8bkm4yy9tbfebqf06hjjw2im5pgdyxgotqkfvr/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+@* <script src="https://cdn.tiny.cloud/1/w07kbl780d8bkm4yy9tbfebqf06hjjw2im5pgdyxgotqkfvr/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> *@
 
 @* toastr *@
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
