fix spelling err: "Guild" to "Guide"

--- a/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Alee_BulkyWeb/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     }
 
                     <li class="nav-item">
-                        <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Guild">Guild</a>
+                        <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Guide">Guide</a>
                     </li>
 
 
